fixed edit form calendar, no longer cut off

--- a/client/main.css
+++ b/client/main.css
@@ -275,10 +275,10 @@ nav a:hover {
 
  .modal-body .content {
   margin-top: 20px;
-  min-height: 50vh;
+  /* min-height: 50vh;
   overflow-y: auto;
   overflow-x: hidden;
-  max-height: 65vh;
+  max-height: 65vh; */
   position: relative;
  }
 
